refactor: Organiza arquivos PWA - move JS para pasta js/

--- a/app/pwa/coleta.html
+++ b/app/pwa/coleta.html
@@ -640,7 +640,7 @@
 
         <!-- Scripts -->
         <script src="../../js/supabase.js"></script>
-        <script src="coleta.js"></script>
+        <script src="js/coleta.js"></script>
 </body>
 
 </html>
