--- a/app/pwa/deposito.html
+++ b/app/pwa/deposito.html
@@ -376,7 +376,7 @@
 
     <!-- Scripts -->
     <script src="../../js/supabase.js"></script>
-    <script src="deposito.js"></script>
+    <script src="js/deposito.js"></script>
 </body>
 
 </html>
