--- a/app/pwa/coleta.html
+++ b/app/pwa/coleta.html
@@ -515,16 +515,8 @@
                         <input type="date" id="validade" class="form-input">
                     </div>
                     <div class="form-group">
-                        <label class="form-label" for="setor">Setor</label>
-                        <select id="setor" class="form-input">
-                            <option value="">Selecione...</option>
-                            <option value="MERCEARIA">MERCEARIA</option>
-                            <option value="AÇOUGUE">AÇOUGUE</option>
-                            <option value="FLV">FLV</option>
-                            <option value="FRIOS">FRIOS</option>
-                            <option value="PADARIA">PADARIA</option>
-                            <option value="LATICÍNIOS">LATICÍNIOS</option>
-                        </select>
+                        <label class="form-label" for="categoria">Categoria</label>
+                        <input type="text" id="categoria" class="form-input" placeholder="Categoria do produto">
                     </div>
                 </div>
 
