Fix: enum motivo_perda, coluna EAN na tabela, loja_id fallback

--- a/app/validade.html
+++ b/app/validade.html
@@ -263,6 +263,7 @@
                 <table class="data-table">
                     <thead>
                         <tr>
+                            <th>Código/EAN</th>
                             <th>Produto</th>
                             <th>Loja</th>
                             <th>Local</th>
@@ -274,7 +275,7 @@
                     </thead>
                     <tbody id="estoqueTable">
                         <tr>
-                            <td colspan="7" style="text-align: center; padding: 40px;">Carregando...</td>
+                            <td colspan="8" style="text-align: center; padding: 40px;">Carregando...</td>
                         </tr>
                     </tbody>
                 </table>
