--- a/app/validade.html
+++ b/app/validade.html
@@ -313,97 +313,91 @@
                             height="16">
                             <polyline points="9 18 15 12 9 6" />
                         </svg>
-                    </button>
                 </div>
-            </div> <!-- Fim contentLojas -->
+            </div>
+        </div> <!-- Fim contentLojas -->
 
-            <!-- Tab Content: Depósito (Nova Seção) -->
-            <div id="contentDeposito" class="tab-content-validade" style="display: none;">
+        <!-- Tab Content: Depósito (Nova Seção) -->
+        <div id="contentDeposito" class="tab-content-validade" style="display: none;">
 
-                <!-- Barra de Ações Depósito -->
-                <div class="deposito-actions" style="display: flex; gap: 10px; margin-bottom: 16px; flex-wrap: wrap;">
-                    <button class="btn btn-danger" id="btnExcluirSelecionadosDeposito" style="display: none;"
-                        onclick="excluirSelecionadosDeposito()">
+            <!-- Barra de Ações Depósito -->
+            <div class="deposito-actions" style="display: flex; gap: 10px; margin-bottom: 16px; flex-wrap: wrap;">
+                <button class="btn btn-danger" id="btnExcluirSelecionadosDeposito" style="display: none;"
+                    onclick="excluirSelecionadosDeposito()">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
+                        <path d="M3 6h18M8 6V4a2 2 0 012-2h4a2 2 0 012 2v2m3 0v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6h14z" />
+                    </svg>
+                    Excluir Selecionados
+                </button>
+                <button class="btn btn-primary" id="btnImprimirSelecionadosDeposito" style="display: none;"
+                    onclick="imprimirSelecionadosDeposito()">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
+                        <path d="M6 9V2h12v7M6 18H4a2 2 0 01-2-2v-5a2 2 0 012-2h16a2 2 0 012 2v5a2 2 0 01-2 2h-2" />
+                        <rect x="6" y="14" width="12" height="8" />
+                    </svg>
+                    Imprimir Etiquetas
+                </button>
+                <a href="pwa/deposito.html" class="btn btn-outline" style="margin-left: auto;">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
+                        <line x1="12" y1="5" x2="12" y2="19" />
+                        <line x1="5" y1="12" x2="19" y2="12" />
+                    </svg>
+                    Nova Coleta Depósito
+                </a>
+            </div>
+
+            <!-- Tabela de Depósito -->
+            <div class="table-wrapper"
+                style="background: var(--bg-card); border-radius: 12px; border: 1px solid var(--border-secondary);">
+                <table class="data-table">
+                    <thead>
+                        <tr>
+                            <th style="width: 40px;">
+                                <input type="checkbox" id="selectAllDeposito"
+                                    onchange="toggleSelectAllDeposito(this.checked)">
+                            </th>
+                            <th>Código</th>
+                            <th>Descrição</th>
+                            <th>Vencimento</th>
+                            <th>Dias p/ Vencer</th>
+                            <th>Usuário</th>
+                            <th>Data/Hora Coleta</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody id="depositoTable">
+                        <tr>
+                            <td colspan="8" style="text-align: center; padding: 40px;">Carregando...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- Paginação Depósito -->
+            <div class="pagination"
+                style="display: flex; justify-content: space-between; align-items: center; padding: 16px; background: var(--bg-card); border-radius: 0 0 12px 12px; border: 1px solid var(--border-secondary); border-top: none;">
+                <div class="pagination-info" style="color: var(--text-secondary); font-size: 14px;">
+                    Mostrando <strong id="paginationInfoDeposito">0 de 0</strong> itens
+                </div>
+                <div class="pagination-controls" style="display: flex; gap: 8px; align-items: center;">
+                    <button class="pagination-btn" id="btnPrevPageDeposito" disabled onclick="mudarPaginaDeposito(-1)">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
                             height="16">
-                            <path
-                                d="M3 6h18M8 6V4a2 2 0 012-2h4a2 2 0 012 2v2m3 0v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6h14z" />
+                            <polyline points="15 18 9 12 15 6" />
                         </svg>
-                        Excluir Selecionados
                     </button>
-                    <button class="btn btn-primary" id="btnImprimirSelecionadosDeposito" style="display: none;"
-                        onclick="imprimirSelecionadosDeposito()">
+                    <span id="pageNumberDisplayDeposito"
+                        style="font-size: 14px; font-weight: 500; min-width: 60px; text-align: center;">Página
+                        1</span>
+                    <button class="pagination-btn" id="btnNextPageDeposito" disabled onclick="mudarPaginaDeposito(1)">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
                             height="16">
-                            <path d="M6 9V2h12v7M6 18H4a2 2 0 01-2-2v-5a2 2 0 012-2h16a2 2 0 012 2v5a2 2 0 01-2 2h-2" />
-                            <rect x="6" y="14" width="12" height="8" />
+                            <polyline points="9 18 15 12 9 6" />
                         </svg>
-                        Imprimir Etiquetas
                     </button>
-                    <a href="pwa/deposito.html" class="btn btn-outline" style="margin-left: auto;">
-                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
-                            height="16">
-                            <line x1="12" y1="5" x2="12" y2="19" />
-                            <line x1="5" y1="12" x2="19" y2="12" />
-                        </svg>
-                        Nova Coleta Depósito
-                    </a>
                 </div>
-
-                <!-- Tabela de Depósito -->
-                <div class="table-wrapper"
-                    style="background: var(--bg-card); border-radius: 12px; border: 1px solid var(--border-secondary);">
-                    <table class="data-table">
-                        <thead>
-                            <tr>
-                                <th style="width: 40px;">
-                                    <input type="checkbox" id="selectAllDeposito"
-                                        onchange="toggleSelectAllDeposito(this.checked)">
-                                </th>
-                                <th>Código</th>
-                                <th>Descrição</th>
-                                <th>Vencimento</th>
-                                <th>Dias p/ Vencer</th>
-                                <th>Usuário</th>
-                                <th>Data/Hora Coleta</th>
-                                <th>Ações</th>
-                            </tr>
-                        </thead>
-                        <tbody id="depositoTable">
-                            <tr>
-                                <td colspan="8" style="text-align: center; padding: 40px;">Carregando...</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <!-- Paginação Depósito -->
-                <div class="pagination"
-                    style="display: flex; justify-content: space-between; align-items: center; padding: 16px; background: var(--bg-card); border-radius: 0 0 12px 12px; border: 1px solid var(--border-secondary); border-top: none;">
-                    <div class="pagination-info" style="color: var(--text-secondary); font-size: 14px;">
-                        Mostrando <strong id="paginationInfoDeposito">0 de 0</strong> itens
-                    </div>
-                    <div class="pagination-controls" style="display: flex; gap: 8px; align-items: center;">
-                        <button class="pagination-btn" id="btnPrevPageDeposito" disabled
-                            onclick="mudarPaginaDeposito(-1)">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
-                                height="16">
-                                <polyline points="15 18 9 12 15 6" />
-                            </svg>
-                        </button>
-                        <span id="pageNumberDisplayDeposito"
-                            style="font-size: 14px; font-weight: 500; min-width: 60px; text-align: center;">Página
-                            1</span>
-                        <button class="pagination-btn" id="btnNextPageDeposito" disabled
-                            onclick="mudarPaginaDeposito(1)">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
-                                height="16">
-                                <polyline points="9 18 15 12 9 6" />
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-            </div> <!-- Fim contentDeposito -->
+            </div>
+        </div> <!-- Fim contentDeposito -->
 
     </main>
 
