feat(auth): troca de senha in-app web; chore(web): atalho de alterar senha no dashboard; fix(mobile-login): peso tipográfico do 'DataCerta'

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -748,8 +748,10 @@
                     <span class="user-role" id="userRole">Carregando...</span>
                 </div>
             </div>
+            <button class="btn btn-ghost btn-sm" onclick="window.location.href = 'reset-senha.html';"
+                style="margin-top: 10px; width: 100%;">Alterar senha</button>
             <button class="btn btn-ghost btn-sm" onclick="auth.signOut()"
-                style="margin-top: 10px; width: 100%;">Sair</button>
+                style="margin-top: 8px; width: 100%;">Sair</button>
         </div>
     </aside>
 
