feat(perdas): paginas e fluxo unificado web/mobile; feat(nav): link perdas

--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -701,6 +701,14 @@
                     </svg></span>
                 <span class="nav-text">Validades</span>
             </a>
+            <a href="perdas.html" class="nav-item">
+                <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M3 6h18" />
+                        <path d="M8 6V4a2 2 0 012-2h4a2 2 0 012 2v2" />
+                        <path d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6" />
+                    </svg></span>
+                <span class="nav-text">Perdas</span>
+            </a>
             <a href="produtos.html" class="nav-item">
                 <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path
