--- a/app/pwa/coleta.html
+++ b/app/pwa/coleta.html
@@ -581,6 +581,16 @@
                     <label class="form-label" for="quantidadePerda">Quantidade</label>
                     <input type="number" id="quantidadePerda" class="form-input" placeholder="0" min="1">
                 </div>
+                <div class="form-group">
+                    <label class="form-label" for="motivoPerda">Motivo da Perda</label>
+                    <select id="motivoPerda" class="form-input" required>
+                        <option value="">Selecione...</option>
+                        <option value="vencido">Vencido</option>
+                        <option value="avaria">Avaria</option>
+                        <option value="roubo">Roubo/Furto</option>
+                        <option value="outro">Outro</option>
+                    </select>
+                </div>
 
                 <p id="mensagemPerda" class="status-msg"></p>
             </div>
