feat(validades): adicionar filtro de Categoria e corrigir coluna Local
- Adicionado dropdown de Categoria no painel de filtros
- Implementada função loadCategorias() para carregar categorias únicas da base
- Adicionada lógica de filtro por categoria em filterAndRender()
- Atualizado botão Limpar Filtros para resetar categorias
- Incluído campo categoria na query de loadEstoque

--- a/app/validade.html
+++ b/app/validade.html
@@ -168,6 +168,11 @@
                 </div>
                 <div class="filter-group">
                     <label
+                        style="display: block; margin-bottom: 6px; font-size: 12px; font-weight: 600; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.5px;">Categoria</label>
+                    <div id="dropdownCategoria" class="multiselect-dropdown"></div>
+                </div>
+                <div class="filter-group">
+                    <label
                         style="display: block; margin-bottom: 6px; font-size: 12px; font-weight: 600; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.5px;">Status</label>
                     <div id="dropdownStatus" class="multiselect-dropdown"></div>
                 </div>
