fix: exibir Categoria ao invés de Local nas tabelas de validades e perdas
- Alterado cabeçalho da tabela em validade.html de Local para Categoria
- Alterado renderEstoque em validade.js para mostrar base.categoria
- Alterado cabeçalho da tabela em perdas.html de Local para Categoria
- Alterado renderPerdas em perdas.js para mostrar base.categoria

--- a/app/perdas.html
+++ b/app/perdas.html
@@ -182,7 +182,7 @@
                     <tr>
                         <th>Produto</th>
                         <th>Loja</th>
-                        <th>Local</th>
+                        <th>Categoria</th>
                         <th>Qtd</th>
                         <th>Valor (R$)</th>
                         <th>Motivo</th>
@@ -204,8 +204,7 @@
                 Mostrando <strong id="paginationInfo">1-25 de 0</strong> itens
             </div>
             <div class="pagination-controls" style="display: flex; gap: 8px; align-items: center;">
-                <div class="items-per-page"
-                    style="margin-right: 16px; display: flex; align-items: center; gap: 8px;">
+                <div class="items-per-page" style="margin-right: 16px; display: flex; align-items: center; gap: 8px;">
                     <span style="font-size: 13px; color: var(--text-muted);">Itens por página:</span>
                     <select id="itemsPerPage"
                         style="padding: 6px; border-radius: 6px; border: 1px solid var(--border-secondary); background: var(--bg-primary); font-size: 13px;">
@@ -217,16 +216,14 @@
                 </div>
 
                 <button class="pagination-btn" id="btnPrevPage" disabled>
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
-                        height="16">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
                         <polyline points="15 18 9 12 15 6" />
                     </svg>
                 </button>
                 <span id="pageNumberDisplay"
                     style="font-size: 14px; font-weight: 500; min-width: 60px; text-align: center;">Página 1</span>
                 <button class="pagination-btn" id="btnNextPage" disabled>
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
-                        height="16">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
                         <polyline points="9 18 15 12 9 6" />
                     </svg>
             </div>
