--- a/app/validade.html
+++ b/app/validade.html
@@ -279,7 +279,7 @@
                             <th>Código/EAN</th>
                             <th>Produto</th>
                             <th>Loja</th>
-                            <th>Local</th>
+                            <th>Categoria</th>
                             <th>Qtd</th>
                             <th>Validade</th>
                             <th>Status</th>
